# planning_interfaces

./: CMakeLists.txt  README.md  package.xml
action/: Approach.action  Continue.action  Mission.action  OnPOI.action  StartMedia.action  Stop.action  WaitFlag.action  WaitTime.action
msg/: ABP.msg  ABPControl.msg  Emergency.msg  FrenetPoint.msg  FrenetPointArray.msg  Lane.msg  LaneContact.msg  LaneContacts.msg  LaneGeometry.msg  LaneSection.msg  MapNavSatResult.msg  Mission.msg  MissionInfo.msg  MissionStatus.msg  POI.msg  POIControl.msg  PlanningLane.msg  PlanningWaypoint.msg  PlanningWaypointArray.msg  Road.msg  RoadArray.msg  RoadEvent.msg  SpeedLimit.msg  SpeedLimits.msg  Trajectory.msg  TrajectoryArray.msg  TrajectoryState.msg  Waypoint.msg  WaypointArray.msg  WaypointManagerIndex.msg  WaypointManagerIndexArray.msg  WaypointManagerSuccess.msg  WaypointPath.msg
srv/: AddMissionABP.srv  AddMissionPOI.srv  GenerateEmergencyRoad.srv  GetMapENUReference.srv  GetMission.srv  GetMissionInfo.srv  GetRoadPlan.srv  NavSatFixQuery.srv  PlanRoute.srv  RemoveMissionABP.srv  RemoveMissionPOI.srv  ResetAdMap.srv  ResetMissionManager.srv  ResetTrajectoryManager.srv  ResetWaypointManager.srv  SaveMission.srv  SetEmergencyModeWaypointManager.srv  UpdateMission.srv  UpdateMissionABP.srv  UpdateMissionPOI.srv  UpdateSpeedManager.srv  WaypointsFixQuery.srv  WaypointsQuery.srv
